# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\CountryController;
+use App\Http\Controllers\Api\PlayerController;
 use App\Http\Controllers\Api\TransferController;
 use App\Http\Controllers\Api\TransferListingController;
 use Illuminate\Http\Request;
@@ -21,4 +22,5 @@ Route::get('/transfer-listings', [TransferListingController::class, 'index']);
 Route::middleware('auth:sanctum')->group(function () {
     Route::post('/transfer-listings', [TransferListingController::class, 'store']);
     Route::post('/transfer/purchase/{player}', [TransferController::class, 'purchasePlayer']);
+    Route::put('/players/{player}', [PlayerController::class, 'update']);
 });
